
Fretalon:

Geomega:
+ New option to show the surrounding sphere (ShowSurroundingsphere true)
  This will only be displayed in geomega, but does not show up in any
  other program
  
Reponse:
  
Revan:
+ Enabled comments (and their passing through) in the tra file ("CC" tag)

Mimrec:
+ Enabled comments (and their passing through) in the tra file ("CC" tag)


Realta:

Spectralizer:

Examples:
+ The EventList example demonstartes the use of event list during simulation
  basically allowing any arbitrary beam/spectrum/polarization input

  
... plus many, many smaller things I already forgot about :)




******************************************************************************




Version 2.29/2.30
=================

*** IMPORTANT - PLEASE READ:

+ El Capitan / Xcode 7.x users: Run the setup script with the additional option
  --patch=yes to apply a set of necessary patches to ROOT and Geant4
+ Exchanged the (slow) ROOT rotations (TMatrix*) in Geomega with new
  MRotation class
  --> If something seems wrong with your rotations email me
+ Partial rewrite of the MEGAlib file I/O classes to enable transparent 
  handling of gzip'ed files
  --> Since I had to modify the whole I/O chain (including the interfaces), 
      email me if there are any problems reading or writing files
+ First beta version of calibration framework Fretalon with Melinator line 
  calibrator
+ Exchange of the ROOT geometry backend (switch to the TGeo* classes)
  --> Since this switch required significant changes in Geomega, please verify
      your geometries
+ The MEGAlib default materials have been changed to the new format
  ("XYZ.ComponentByAtoms Si 1") which is based on natural isotope distributions
  in Geant4. Thus the cross sections changed slightly.
+ A compiler with C++11 support is now required - all current Mac and Linux
  compiler should do, e.g. g++ 4.8 and higher and Apple compiler 6.0
  and higher. 
+ ROOT is now built using cmake instead of its older, error prone configure